[gd_scene load_steps=4 format=3 uid="uid://cuy1kbxqqbxsl"]

[ext_resource type="Script" path="res://Levels/Step4/Entities/ip_entity.gd" id="1_jqhsq"]
[ext_resource type="Texture2D" uid="uid://cu2sktpyyv81o" path="res://box.webp" id="1_sg1l6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig8d6"]
size = Vector2(69.7628, 20)

[node name="ip_entity" type="Node2D"]
script = ExtResource("1_jqhsq")

[node name="ip_area" type="Area2D" parent="."]
scale = Vector2(1.04906, 0.749162)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ip_area"]
shape = SubResource("RectangleShape2D_ig8d6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.140146, -0.0288032)
texture = ExtResource("1_sg1l6")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -8.0
offset_right = 233.0
offset_bottom = 54.0
scale = Vector2(0.274296, 0.258345)
text = "IP"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="ip_area" to="." method="_on_ip_area_body_entered"]
[connection signal="body_exited" from="ip_area" to="." method="_on_ip_area_body_exited"]
[connection signal="mouse_entered" from="ip_area" to="." method="_on_ip_area_mouse_entered"]
[connection signal="mouse_exited" from="ip_area" to="." method="_on_ip_area_mouse_exited"]
